# math_puzzle_rl

./: CMakeLists.txt  README.md  functions_for_rl.cpp  functions_for_rl.h  rl.cpp
RL_DQN/: .gitignore  CMakeLists.txt  DeepQNetwork.cpp  DeepQNetwork.h  NeuralNetwork.cpp  NeuralNetwork.h  README.md  main.cpp  rl_utils.cpp  rl_utils.h  roadmap.txt  test  test.cpp  train  train.txt  training_set.cpp
RL_DQN/data/: input.txt  train  train.txt  training_set.cpp
RL_DQN/include/: DeepQNetwork.cpp  DeepQNetwork.h  NeuralNetwork.cpp  NeuralNetwork.h  globals.h  rl_utils.cpp  rl_utils.h
RL_DQN/src/: DeepQNetwork.cpp  NeuralNetwork.cpp  globals.cpp  rl_utils.cpp
RL_DQN/test/: CMakeLists.txt  or.cpp  xor.cpp
RL_DQN/test/include/: NeuralNetwork.h  globals.h
RL_DQN/test/src/: NeuralNetwork.cpp  globals.cpp
RL_ValueIter/: NaiveQLearning.cpp  README.md  rl.cpp  rl_utils.h
RL_ValueIter/gui/: app.py  rl
rl_QLearning/: CMakeLists.txt  NaiveQLearning.cpp  rl.cpp  rl_utils.cpp
rl_ValueIter/: NaiveQLearning.h
