cmake_minimum_required(VERSION 3.22)
project(rl LANGUAGES CXX)
set(CMAKE_CXX_COMPILER "/usr/bin/g++")
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-O3")
set(CMAKE_CXX_FLAGS "-march=native")
set(CMAKE_CXX_FLAGS "-mavx2")
include_directories(include/)
add_library(rl_utils ./include/rl_utils.cpp)
add_library(NeuralNetwork ./include/NeuralNetwork.cpp)
add_library(DeepQNetwork ./include/DeepQNetwork.cpp)
add_executable(main main.cpp)
target_link_libraries(DeepQNetwork rl_utils)
target_link_libraries(DeepQNetwork NeuralNetwork)
target_link_libraries(main rl_utils)
target_link_libraries(main NeuralNetwork) 
target_link_libraries(main DeepQNetwork)
