cmake_minimum_required(VERSION 3.22)
project(rl LANGUAGES CXX)
set(CMAKE_CXX_COMPILER "/usr/bin/g++")
set(CMAKE_CXX_STANDARD 20)
add_compile_options(-Wall -Wextra -Wpedantic -O3 -g -Wshadow -Wconversion -Wpedantic -Werror -march=native -mavx2)
include_directories(include/)
add_library(globals ./src/globals.cpp)
add_library(rl_utils ./src/rl_utils.cpp)
add_library(NeuralNetwork ./src/NeuralNetwork.cpp)
add_library(DeepQNetwork ./src/DeepQNetwork.cpp)
add_executable(main main.cpp)
target_link_libraries(DeepQNetwork rl_utils)
target_link_libraries(DeepQNetwork globals)
target_link_libraries(DeepQNetwork NeuralNetwork)
target_link_libraries(main rl_utils)
target_link_libraries(main globals)
target_link_libraries(main NeuralNetwork) 
target_link_libraries(main DeepQNetwork)
