cmake_minimum_required(VERSION 3.22)
project(rl LANGUAGES CXX)
set(CMAKE_CXX_COMPILER "/usr/bin/g++")
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-O3")
include_directories(include/)
add_library(NaiveQLearning NaiveQLearning.cpp)
add_library(rl_utils rl_utils.cpp)
add_executable(rl rl.cpp)
target_link_libraries(NaiveQLearning rl_utils)
target_link_libraries(rl NaiveQLearning)
target_link_libraries(rl rl_utils) 
